--- a/src/main/resources/static/css/content.css
+++ b/src/main/resources/static/css/content.css
@@ -30,6 +30,15 @@ td.content_box {
 	background-color: #ECF87F;
 }
 
-
+input.btn01:hover {
+	border: 2px solid #3D550C;
+	width: 150px;
+	height: 40px;
+	font-family: NanumGothic;
+	font-size: 20px;
+	padding: 5px;
+	background-color: #a8b90b;
+	cursor: pointer;
+}
 
 
