--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -11,6 +11,13 @@ span.menu {
 	font-size: 20px;
 }
 
+span.loginid {
+	color: #3D550C;
+	font-family: Arial;
+	font-size: 20px;
+	font-weight: bold;
+}
+
 a:link {
 	text-decoration:none;
 	color: inherit;
