--- a/src/main/resources/static/css/board.css
+++ b/src/main/resources/static/css/board.css
@@ -11,9 +11,31 @@ th.board_title {
 td.board_content {
 	font-family: NanumGothic, Arial;
 	font-size: 17px;
-	background-color: #d7efa9;
+	background-color: #e9f7ce;
 	border-left: 1px solid #3D550C;
 	border-right: 1px solid #3D550C;
 	border-bottom: 1px solid #3D550C;
-	color: #3D550C;
+	color: #253407;
 }
+
+a.contentlink:link {
+	font-family: NanumGothic, Arial;
+	font-size: 17px;
+	color: #253407;
+	text-decoration:none;
+}
+
+a.contentlink:visited {
+	font-family: NanumGothic, Arial;
+	font-size: 17px;
+	color: #808080;
+	text-decoration:none;
+}
+
+a.contentlink:hover {
+	font-family: NanumGothic, Arial;
+	font-size: 17px;
+	color: #253407;
+	font-weight: bold;
+}
+
